# pyspark_airflow

./: README.md  pyproject.toml
dags/: .movie_data.py.swp  movie_data.py
pyspark/: agg.py  join.py  sp.py
src/pyspark_airflow/: re.py
